[package]
name = "chips_screen_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
eframe = "0.29.0"
egui_extras = { version = "0.29.0", features = ["default", "all_loaders"]}
fontdue = "0.9.2"
gif = "0.13.1"
image = "0.25.2"
rand = "0.8.5"
serialport = "4.5.1"
thiserror = "1.0.64"
windows-result = "0.2.0"

[dependencies.windows]
version = "0.58.0"
features = [
    "Devices_Enumeration",
    "Foundation_Collections",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
]
